syntax = "proto3";

package users;

option go_package ="./users"; // Specify the RPC file generation path address

service UsersService {
  rpc GetUserDisplayName(GetUserDisplayNameRequest) returns (GetUserDisplayNameResponse) {}
  rpc GetUserBalance(GetUserBalanceRequest) returns (GetUserBalanceResponse) {}
  rpc WithdrawUserBalance(WithdrawUserBalanceRequest) returns (EmptyResponse) {}
  rpc DepositUserBalance(DepositUserBalanceRequest) returns (EmptyResponse) {}
}

message GetUserDisplayNameRequest {
  string user_id = 1;
}

message GetUserDisplayNameResponse {
  string user_name = 1;
}

message GetUserBalanceRequest {
  string user_id = 1;
}

message GetUserBalanceResponse {
  int64 amount = 1;
}

message DepositUserBalanceRequest {
  string user_id = 1;
  int64 amount_change = 2;
}

message WithdrawUserBalanceRequest {
  string user_id = 1;
  int64 amount_change = 2;
}

message EmptyResponse {}
